--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 								<section id="banner">
 									<div class="content">
 										<header>
-											<h1>Hi, <br />
-											I’m Shaun Davis</h1>
+											<h1>Hi, I’m <br />
+											 Shaun Davis</h1>
 											<p>A university student & hopeful programmer</p>
 										</header>
 										<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.</p>
@@ -46,7 +46,7 @@
 										</ul>
 									</div>
 									<span class="image object">
-										<img src="images/pic10.jpg" alt="" />
+										<img src="images/BlackCat.png" alt="images/pic10.jpg" />
 									</span>
 								</section>
 
