--- a/index.html
+++ b/index.html
@@ -24,11 +24,9 @@
 								<header id="header">
 									<a href="index.html" class="logo"><strong>About</strong> Shaun Davis</a>
 									<ul class="icons">
-										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon brands fa-snapchat-ghost"><span class="label">Snapchat</span></a></li>
-										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>
+										<li><a href="https://twitter.com/Hewwo_ImADemon" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+										<li><a href="https://a-facade.itch.io/" class="icon brands fa-itch-io"><span class="label">Itch.io</span></a></li>
+										<li><a href="https://github.com/A-Facade" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 									</ul>
 								</header>
 
@@ -40,13 +38,13 @@
 											 Shaun Davis</h1>
 											<p>A university student & hopeful programmer</p>
 										</header>
-										<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.</p>
+										<p>I've been working towards the goal of becoming a game programmer since highschool, and with only a few years left until I finally enter the industry! Please feel free to look around this little portfolio website as it, and I delevop over time.</p>
 										<ul class="actions">
-											<li><a href="#" class="button big">Learn More</a></li>
+											<li><a href="aboutShaun.html" class="button big">Learn More</a></li>
 										</ul>
 									</div>
 									<span class="image object">
-										<img src="images/BlackCat.png" alt="" />
+										<img src="" alt="Image description:" />
 									</span>
 								</section>
 
@@ -94,23 +92,23 @@
 									</header>
 									<div class="posts">
 										<article>
-											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
-											<h3>Cube 1</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+											<a href="balancedDiet.html" class="image"><img src="" alt="Image description:" /></a>
+											<h3>Balanced Diet - Not made yet...</h3>
+											<p>A small game about stratigically placing frogs, each frog placed causes all the previously placed frogs to hop forward. Can you make sure they eat all the flies?</p>
 											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
+												<li><a href="balancedDiet.html" class="button">More</a></li>
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
-											<h3>Cube 2</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+											<a href="deadShift.html" class="image"><img src="" alt="Image description:" /></a>
+											<h3>A Dead Shift - Not made yet...</h3>
+											<p>You loved your job as it used to be the only job that had nice customers. Keywords: "Used to", but after a bit of a fall, and a veerryy minor... serious head wound. You now have to deal with said customers, while fighting off the grasps of death. Geez... Who knew working in a graveyard would be this stressful?</p>
 											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
+												<li><a href="deadShift.html" class="button">More</a></li>
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="" alt="Image description:" /></a>
 											<h3>Cube 3</h3>
 											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
 											<ul class="actions">
@@ -118,7 +116,7 @@
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="" alt="Image description:" /></a>
 											<h3>Cube 4</h3>
 											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
 											<ul class="actions">
@@ -126,7 +124,7 @@
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="" alt="Image description:" /></a>
 											<h3>Cube 5</h3>
 											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
 											<ul class="actions">
@@ -134,7 +132,7 @@
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="" alt="Image description:" /></a>
 											<h3>Cube 6</h3>
 											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
 											<ul class="actions">
@@ -168,7 +166,7 @@
 										<li><a href="generic.html">Generic</a></li>
 										<li><a href="elements.html">Elements</a></li>
 										<li>
-											<span class="opener">Submenu</span>
+											<span class="opener">Games</span>
 											<ul>
 												<li><a href="#">SUB 1</a></li>
 												<li><a href="#">SUB 2</a></li>
@@ -176,8 +174,6 @@
 												<li><a href="#">SUB 4</a></li>
 											</ul>
 										</li>
-										<li><a href="#">Sidebar 1</a></li>
-										<li><a href="#">Sidebar 2</a></li>
 										<li>
 											<span class="opener">Another Submenu</span>
 											<ul>
@@ -187,9 +183,7 @@
 												<li><a href="#">SUB 4</a></li>
 											</ul>
 										</li>
-										<li><a href="#">Sidebar 3</a></li>
-										<li><a href="#">Sidebar 4</a></li>
-										<li><a href="#">Sidebar 5</a></li>
+										<li><a href="https://a-facade.itch.io/">Itch.io Profile</a></li>
 									</ul>
 								</nav>
 
@@ -200,15 +194,15 @@
 									</header>
 									<div class="mini-posts">
 										<article>
-											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="" alt="Image description:" /></a>
 											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic08.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="" alt="Image description:" /></a>
 											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic09.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="" alt="Image description:" /></a>
 											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
 										</article>
 									</div>
@@ -220,12 +214,11 @@
 							<!-- Section -->
 								<section>
 									<header class="major">
-										<h2>Get in touch</h2>
+										<h2>Contact Me</h2>
 									</header>
 									<p>Sed varius enim lorem ullamcorper dolore aliquam aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin sed aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
 									<ul class="contact">
 										<li class="icon solid fa-envelope"><a href="#">FakeBusinessURL</a></li>
-										<li class="icon solid fa-phone">(000) 000-0000</li>
 									</ul>
 								</section>
 
