Updated a bunch of text & added 2 images

--- a/index.html
+++ b/index.html
@@ -22,11 +22,12 @@
 
 							<!-- Header -->
 								<header id="header">
-									<a href="index.html" class="logo"><strong>About</strong> Shaun Davis</a>
+									<a class="logo"><strong>About</strong> Shaun Davis</a>
 									<ul class="icons">
 										<li><a href="https://twitter.com/Hewwo_ImADemon" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 										<li><a href="https://a-facade.itch.io/" class="icon brands fa-itch-io"><span class="label">Itch.io</span></a></li>
 										<li><a href="https://github.com/A-Facade" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+										<li><a href="https://www.linkedin.com/in/shaundavisprogrammer/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 									</ul>
 								</header>
 
@@ -39,9 +40,6 @@
 											<p>A university student & hopeful programmer</p>
 										</header>
 										<p>I've been working towards the goal of becoming a game programmer since highschool, and with only a few years left until I finally enter the industry! Please feel free to look around this little portfolio website as it, and I delevop over time.</p>
-										<ul class="actions">
-											<li><a href="aboutShaun.html" class="button big">Learn More</a></li>
-										</ul>
 									</div>
 									<span class="image object">
 										<img src="" alt="Image description:" />
@@ -51,48 +49,13 @@
 							<!-- Section -->
 								<section>
 									<header class="major">
-										<h2>Badge thingys</h2>
+										<h2>Games made, or not to be made</h2>
 									</header>
-									<div class="features">
-										<article>
-											<span class="icon fa-gem"></span>
-											<div class="content">
-												<h3>GEM BADGE</h3>
-												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											</div>
-										</article>
-										<article>
-											<span class="icon solid fa-paper-plane"></span>
-											<div class="content">
-												<h3>PAPER PLANE BADGE</h3>
-												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											</div>
-										</article>
-										<article>
-											<span class="icon solid fa-rocket"></span>
-											<div class="content">
-												<h3>ROCKET BADGE</h3>
-												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											</div>
-										</article>
-										<article>
-											<span class="icon solid fa-signal"></span>
-											<div class="content">
-												<h3>WIFI BADGE</h3>
-												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											</div>
-										</article>
-									</div>
-								</section>
-
-							<!-- Section -->
-								<section>
-									<header class="major">
-										<h2>MORE SECTION CUBES</h2>
-									</header>
+									<p>If you like any of these game ideas, or want to give me any feedback on it at all, please feel free to tell me about it through any of my social media or email! (I'll need all the advise I can get)<p>
 									<div class="posts">
 										<article>
-											<a href="balancedDiet.html" class="image"><img src="" alt="Image description:" /></a>
+											<a href="balancedDiet.html" class="image"><img src="images\austin-santaniello-rDrcMdvXzUw-unsplash.jpg" height="250" alt="Image description: Close up picture of a Bullfrog, sitting on a large flat rock, facing forward towards the camera." /></a>
+											<h6>Photo by <a href="https://unsplash.com/@austinsantaniello?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Austin Santaniello</a> on <a href="https://unsplash.com/?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></h6>
 											<h3>Balanced Diet - Not made yet...</h3>
 											<p>A small game about stratigically placing frogs, each frog placed causes all the previously placed frogs to hop forward. Can you make sure they eat all the flies?</p>
 											<ul class="actions">
@@ -100,7 +63,8 @@
 											</ul>
 										</article>
 										<article>
-											<a href="deadShift.html" class="image"><img src="" alt="Image description:" /></a>
+											<a href="deadShift.html" class="image"><img src="images\max-kleinen-Jigc7F9q7Ik-unsplash.jpg" height="250" alt="Image description: Old skull on wooden pole, missing jawbar, and has a chunk bone missing off of their left eye that lets you see inside of the skull's head slightly." /></a>
+											<h6>Photo by <a href="https://unsplash.com/@hirmin?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Max Kleinen</a> on <a href="https://unsplash.com/s/photos/skull-on-grave-rendered?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></h6>
 											<h3>A Dead Shift - Not made yet...</h3>
 											<p>You loved your job as it used to be the only job that had nice customers. Keywords: "Used to", but after a bit of a fall, and a veerryy minor... serious head wound. You now have to deal with said customers, while fighting off the grasps of death. Geez... Who knew working in a graveyard would be this stressful?</p>
 											<ul class="actions">
@@ -108,7 +72,7 @@
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="" alt="Image description:" /></a>
+											<a href="#" class="image"><img src="" height="250" alt="Image description:" /></a>
 											<h3>Cube 3</h3>
 											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
 											<ul class="actions">
@@ -116,7 +80,7 @@
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="" alt="Image description:" /></a>
+											<a href="#" class="image"><img src="" height="250" alt="Image description:" /></a>
 											<h3>Cube 4</h3>
 											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
 											<ul class="actions">
@@ -124,7 +88,7 @@
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="" alt="Image description:" /></a>
+											<a href="#" class="image"><img src="" height="250" alt="Image description:" /></a>
 											<h3>Cube 5</h3>
 											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
 											<ul class="actions">
@@ -132,7 +96,7 @@
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="" alt="Image description:" /></a>
+											<a href="#" class="image"><img src="" height="250" alt="Image description:" /></a>
 											<h3>Cube 6</h3>
 											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
 											<ul class="actions">
@@ -156,7 +120,6 @@
 									<ul>
 										<li><a href="index.html">Homepage</a></li>
 										<li><a href="generic.html">Generic</a></li>
-										<li><a href="elements.html">Elements</a></li>
 										<li>
 											<span class="opener">Games</span>
 											<ul>
@@ -167,7 +130,7 @@
 											</ul>
 										</li>
 										<li>
-											<span class="opener">Another Submenu</span>
+											<span class="opener">Game Jam Creations</span>
 											<ul>
 												<li><a href="#">SUB 1</a></li>
 												<li><a href="#">SUB 2</a></li>
@@ -175,7 +138,12 @@
 												<li><a href="#">SUB 4</a></li>
 											</ul>
 										</li>
-										<li><a href="https://a-facade.itch.io/">Itch.io Profile</a></li>
+										<li>
+											<span class="opener">Grad in Games Challenges</span>
+											<ul>
+												<li><a href="#">Challenge #1</a></li>
+											</ul>
+										</li>
 									</ul>
 								</nav>
 
@@ -208,9 +176,11 @@
 									<header class="major">
 										<h2>Contact Me</h2>
 									</header>
-									<p>Sed varius enim lorem ullamcorper dolore aliquam aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin sed aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+									<p>Hey! Have anything you want to say to me? Be it advice, compliments, or critism, feel free to use any of the following to let me know!</p>
 									<ul class="contact">
-										<li class="icon solid fa-envelope"><a href="#">FakeBusinessURL</a></li>
+										<li class="icon solid fa-envelope"><a href="#">Email:<br />FakeBusinessURL</a></li>
+										<li class="icon brands fa-twitter"><a href="https://twitter.com/Hewwo_ImADemon">Twitter:<br />@Hewwo_ImADemon</a></li>
+										<li class="icon brands fa-linkedin"><a href="https://www.linkedin.com/in/shaundavisprogrammer/">LinkedIn:<br />Shaun Davis</a></li>
 									</ul>
 								</section>
 
