--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 					</div>
 
 				<!-- Sidebar -->
-					<div id="sidebar">
+					<div id="sidebar" class="inactive">
 						<div class="inner">
 							<!-- Menu -->
 								<nav id="menu">
