Added HTML page
Added grads in games challenge page, need to add more to it still

--- a/index.html
+++ b/index.html
@@ -54,6 +54,14 @@
 									<p>If you like any of these game ideas, or want to give me any feedback on it at all, please feel free to tell me about it through any of my social media or email! (I'll need all the advise I can get)<p>
 									<div class="posts">
 										<article>
+											<a href="pacman.html" class="image"><img src="" height="250" alt="Image description:" /></a>
+											<h3>Pacman - Not made yet...</h3>
+											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+											<ul class="actions">
+												<li><a href="#" class="button">More</a></li>
+											</ul>
+										</article>
+										<article>
 											<a href="balancedDiet.html" class="image"><img src="images\austin-santaniello-rDrcMdvXzUw-unsplash.jpg" height="250" alt="Image description: Close up picture of a Bullfrog, sitting on a large flat rock, facing forward towards the camera." /></a>
 											<h6>Photo by <a href="https://unsplash.com/@austinsantaniello?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Austin Santaniello</a> on <a href="https://unsplash.com/?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></h6>
 											<h3>Balanced Diet - Not made yet...</h3>
@@ -69,38 +77,6 @@
 											<p>You loved your job as it used to be the only job that had nice customers. Keywords: "Used to", but after a bit of a fall, and a veerryy minor... serious head wound. You now have to deal with said customers, while fighting off the grasps of death. Geez... Who knew working in a graveyard would be this stressful?</p>
 											<ul class="actions">
 												<li><a href="deadShift.html" class="button">More</a></li>
-											</ul>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="" height="250" alt="Image description:" /></a>
-											<h3>Cube 3</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
-											</ul>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="" height="250" alt="Image description:" /></a>
-											<h3>Cube 4</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
-											</ul>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="" height="250" alt="Image description:" /></a>
-											<h3>Cube 5</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
-											</ul>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="" height="250" alt="Image description:" /></a>
-											<h3>Cube 6</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
 											</ul>
 										</article>
 									</div>
@@ -123,25 +99,19 @@
 										<li>
 											<span class="opener">Games</span>
 											<ul>
-												<li><a href="#">SUB 1</a></li>
-												<li><a href="#">SUB 2</a></li>
-												<li><a href="#">SUB 3</a></li>
-												<li><a href="#">SUB 4</a></li>
+												<li><a href="pacman.html">Pacman</a></li>
 											</ul>
 										</li>
 										<li>
 											<span class="opener">Game Jam Creations</span>
 											<ul>
-												<li><a href="#">SUB 1</a></li>
-												<li><a href="#">SUB 2</a></li>
-												<li><a href="#">SUB 3</a></li>
-												<li><a href="#">SUB 4</a></li>
+												<li><a href="#">To be added</a></li>
 											</ul>
 										</li>
 										<li>
 											<span class="opener">Grad in Games Challenges</span>
 											<ul>
-												<li><a href="#">Challenge #1</a></li>
+												<li><a href="gradsInGames.html">Challenge #1</a></li> 
 											</ul>
 										</li>
 									</ul>
@@ -150,35 +120,10 @@
 							<!-- Section -->
 								<section>
 									<header class="major">
-										<h2>Mini Posts</h2>
-									</header>
-									<div class="mini-posts">
-										<article>
-											<a href="#" class="image"><img src="" alt="Image description:" /></a>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="" alt="Image description:" /></a>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="" alt="Image description:" /></a>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
-										</article>
-									</div>
-									<ul class="actions">
-										<li><a href="#" class="button">More</a></li>
-									</ul>
-								</section>
-
-							<!-- Section -->
-								<section>
-									<header class="major">
 										<h2>Contact Me</h2>
 									</header>
 									<p>Hey! Have anything you want to say to me? Be it advice, compliments, or critism, feel free to use any of the following to let me know!</p>
 									<ul class="contact">
-										<li class="icon solid fa-envelope"><a href="#">Email:<br />FakeBusinessURL</a></li>
 										<li class="icon brands fa-twitter"><a href="https://twitter.com/Hewwo_ImADemon">Twitter:<br />@Hewwo_ImADemon</a></li>
 										<li class="icon brands fa-linkedin"><a href="https://www.linkedin.com/in/shaundavisprogrammer/">LinkedIn:<br />Shaun Davis</a></li>
 									</ul>
