Added a picture of me

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 										<p>I've been working towards the goal of becoming a game programmer since highschool, and with only a few years left until I finally enter the industry! Please feel free to look around this little portfolio website as it, and I delevop over time.</p>
 									</div>
 									<span class="image object">
-										<img src="" alt="Image description:" />
+										<img src="images\PictureOfShaunDavis.jpg" alt="Image description: Picture of Shaun Davis. 19 year old male, brown haired, wearing a oslo gray highneck, and a thin black coat with blue lining inside." />
 									</span>
 								</section>
 
