Added a picture + Updated some text

--- a/index.html
+++ b/index.html
@@ -40,9 +40,10 @@
 											<p>A university student & hopeful programmer</p>
 										</header>
 										<p>I've been working towards the goal of becoming a game programmer since highschool, and with only a few years left until I finally enter the industry! Please feel free to look around this little portfolio website as it, and I delevop over time.</p>
+										<p> <\p>
 									</div>
 									<span class="image object">
-										<img src="images\PictureOfShaunDavis.jpg" alt="Image description: Picture of Shaun Davis. 19 year old male, brown haired, wearing a oslo gray highneck, and a thin black coat with blue lining inside." />
+										<img src="images\PictureOfShaunDavis.jpg" " alt="Image description: Picture of Shaun Davis. 19 year old male, brown haired, wearing a oslo gray highneck, and a thin black coat with blue lining inside." />
 									</span>
 								</section>
 
@@ -54,7 +55,8 @@
 									<p>If you like any of these game ideas, or want to give me any feedback on it at all, please feel free to tell me about it through any of my social media or email! (I'll need all the advise I can get)<p>
 									<div class="posts">
 										<article>
-											<a href="pacman.html" class="image"><img src="" height="250" alt="Image description:" /></a>
+											<a href="pacman.html" class="image"><img src="images\sigmund-By-tZImt0Ms-unsplash.jpg" height="250" alt="Image description: Picture of GAME OVER in red text, above it 5 pacman ghosts. Their colours and names, from left to right are: White ghost (Unknown), Blue ghost (Inky), Red ghost (Blinky), Pink ghost (Pinky), and Orange ghost (Clyde)" /></a>
+											<h6>Photo by <a href="https://unsplash.com/@sigmund?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Sigmund</a> on <a href="https://unsplash.com/s/photos/pacman?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></h6>
 											<h3>Pacman - Not made yet...</h3>
 											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
 											<ul class="actions">
