Updated hamburger menu

--- a/index.html
+++ b/index.html
@@ -76,7 +76,6 @@
 											<h6>Photo by <a href="https://unsplash.com/@hirmin?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Max Kleinen</a> on <a href="https://unsplash.com/s/photos/skull-on-grave-rendered?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></h6>
 											<h3>A Dead Shift - Not made yet...</h3>
 											<p>You loved your job as it used to be the only job that had nice customers. Keywords: "Used to", but after a bit of a fall, and a veerryy minor... serious head wound. You now have to deal with said customers, while fighting off the grasps of death. Geez... Who knew working in a graveyard would be this stressful?</p>
-											
 										</article>
 									</div>
 								</section>
@@ -94,11 +93,10 @@
 									</header>
 									<ul>
 										<li><a href="index.html">Homepage</a></li>
-										<li><a href="generic.html">Generic</a></li>
 										<li>
 											<span class="opener">Games</span>
 											<ul>
-												<li><a href="pacman.html">Pacman</a></li>
+												<li><a href="#">Pacman - WIP - Not added yet</a></li>
 											</ul>
 										</li>
 										<li>
@@ -110,7 +108,7 @@
 										<li>
 											<span class="opener">Grad in Games Challenges</span>
 											<ul>
-												<li><a href="gradsInGames.html">Challenge #1</a></li> 
+												<li><a href=" ">Challenge #1 - WIP - Not added yet</a></li> 
 											</ul>
 										</li>
 									</ul>
