Updated hambur menu

--- a/index.html
+++ b/index.html
@@ -102,13 +102,13 @@
 										<li>
 											<span class="opener">Game Jam Creations</span>
 											<ul>
-												<li><a href="#">To be added</a></li>
+												<li><a href="#">WIP - To be added</a></li>
 											</ul>
 										</li>
 										<li>
 											<span class="opener">Grad in Games Challenges</span>
 											<ul>
-												<li><a href=" ">Challenge #1 - WIP - Not added yet</a></li> 
+												<li><a href="#">Challenge #1 - WIP - Not added yet</a></li> 
 											</ul>
 										</li>
 									</ul>
