Corrected spelling in Pacman
Misspelt "familiarise"

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 											<a href="pacman.html" class="image"><img src="images\sigmund-By-tZImt0Ms-unsplash.jpg" height="250" alt="Image description: Picture of GAME OVER in red text, above it 5 pacman ghosts. Their colours and names, from left to right are: White ghost (Unknown), Blue ghost (Inky), Red ghost (Blinky), Pink ghost (Pinky), and Orange ghost (Clyde)" /></a>
 											<h6>Photo by <a href="https://unsplash.com/@sigmund?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Sigmund</a> on <a href="https://unsplash.com/s/photos/pacman?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></h6>
 											<h3>Pacman Recreation - Working on it!</h3>
-											<p>A recreation of Pacman, this is the first game in university that I'll be making. This is mostly for me to familliarise myself with C++ code, even after this is marked I would like to continue to improve it and upload it here.</p>
+											<p>A recreation of Pacman, this is the first game in university that I'll be making. This is mostly for me to familiarise myself with C++ code, even after this is marked I would like to continue to improve it and upload it here.</p>
 											
 										</article>
 										<article>
