--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 										<h2>Games made, or not to be made</h2>
 									</header>
 									<h4>That is the question...</h4>
-									<p>This section is dedicated to games I have made, or game ideas that I may make in the future.</p>
+									<p>This section is dedicated to games I have made, or games that I may make in the future.</p>
 									<p>If you like any of these game ideas, or want to give me any feedback on it at all, please feel free to tell me about it through any of my social media or email! (I'll need all the advise I can get)<p>
 									<div class="posts">
 										<article>
