--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 										<p>After that, I FINALLY got my first experience with making an actual standalone game when I was in high school, where I made a text-based escape room game in Python, where you was trapped in a deadly mansion. Thinking back it makes me wish I still had the files for all these creations, but either way, they ended up being the final few pushes that set me on the path I'm on today.</p>
 									</div>
 									<span class="image object">
-										<img src="images\PictureOfShaunDavis.jpg" width="145" height="193" alt="Image description: Picture of Shaun Davis. 19 year old male, brown haired, wearing a oslo gray highneck, and a thin black coat with blue lining inside." />
+										<img src="images\PictureOfShaunDavis.jpg" alt="Image description: Picture of Shaun Davis. 19 year old male, brown haired, wearing a oslo gray highneck, and a thin black coat with blue lining inside." />
 									</span>
 								</section>
 
