Added previous games
RCT + PP

--- a/index.html
+++ b/index.html
@@ -77,6 +77,18 @@
 											<h3>A Dead Shift - Not made yet...</h3>
 											<p>You loved your job as it used to be the only job that had nice customers. Keywords: "Used to", but after a bit of a fall, and a veerryy minor... serious head wound. You now have to deal with said customers, while fighting off the grasps of death. Geez... Who knew working in a graveyard would be this stressful?</p>
 										</article>
+										<article>
+											<a href="RCT.html" class="image"><img src="images\davide-cantelli-98Pk5OO_aG4-unsplash.jpg" height="250" alt="Image description: " /></a>
+											<h6>Photo by <href="https://unsplash.com/@cant89?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Davide Cantelli</a> on <a href="https://unsplash.com/s/photos/skull-on-grave-rendered?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></h6>
+											<h3>Rioma's Crumbling Tower - Only 1 level</h3>
+											<p>Sick of waiting inside her tower, Rioma takes action and tries to escape the haunted castles imprisonment and its spooky residents, now she has to solve puzzles, jump between platforms, and avoid... maids? Well, either way that's the spirit Rioma!</p>
+										</article>
+										<article>
+											<a href="panickedPeace.html" class="image"><img src="images\PanickedPeace-Background.jpg" height="250" alt="Image description: " /></a>
+											<h6>Photo by Shaun Davis</a></h6>
+											<h3>Panicked Peace! - Only 1 level (Broken)</h3>
+											<p>In a parallel universe, a new war is appearing! Steal Guns so it never happens. Now you must run, dodge and avoid soldiers of war trying to get their weapons back.</p>
+										</article>
 									</div>
 								</section>
 
@@ -96,19 +108,16 @@
 										<li>
 											<span class="opener">Games</span>
 											<ul>
-												<li><a href="#">Pacman - WIP - Not added yet</a></li>
+												<li><a href="#">Mario Recreation - WIP - Not added yet</a></li>
+												<li><a href="#">Pacman Recreation - WIP - Basic mechanics</a></li>
+												<li><a href="RCT.html">Rioma's Crumbling Tower - Level 1</a></li>
+												<li><a href="panickedPeace.html">Panicked Peace! - Level 1 (Broken)</a></li>
 											</ul>
 										</li>
 										<li>
 											<span class="opener">Game Jam Creations</span>
 											<ul>
 												<li><a href="#">WIP - To be added</a></li>
-											</ul>
-										</li>
-										<li>
-											<span class="opener">Grad in Games Challenges</span>
-											<ul>
-												<li><a href="#">Challenge #1 - WIP - Not added yet</a></li> 
 											</ul>
 										</li>
 									</ul>
